added pickle rick

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Workflow</h1>
+    <img src="https://media2.giphy.com/media/3o7btQdOa4wOH8U7RK/giphy.gif" alt=”Jack” >
 </body>
 </html>
