--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Workflow</h1>
     <img src="https://media2.giphy.com/media/3o7btQdOa4wOH8U7RK/giphy.gif" alt=”Jack” >
+    <p>I didnt pay attention to the instructions so this line recreates a step
+    </p>
 </body>
 </html>
