--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Workflow</h1>
     <img src="https://media2.giphy.com/media/3o7btQdOa4wOH8U7RK/giphy.gif" alt=”Jack” >
+    <img src="https://gph.is/191zeP3" alt=”Jill” >
 </body>
 </html>
